fixed body overflow on the x axis

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: #f0f2f5;
+    overflow-x: hidden;
 }
 .ytlogo {
     width:10%;
@@ -60,15 +61,17 @@ body::before {
 }
 .tag-carousel{
     position: relative;
+    padding-right: 5%;
 }
 .tag-carousel-wrapper {
     position: relative;
     border-top: 2px solid #e0e4eb;
     border-bottom: 2px solid #e0e4eb;
     z-index: 1;
-    margin-top: 3px;
-    margin-left: -2.8%;
+    margin-left: -2.7%;
+    margin-right: -5%;
 }
+
 .tag-btn{
     display:inline-block;
     min-width: 100px;
@@ -134,6 +137,7 @@ overflow: hidden;
     position: relative;
     margin-top: -5px;
 }
+
 @media only screen and (min-width: 800px) and (max-width: 1300px) {
     .side-nav-text{
         font-size: 0.70em;
